--- a/Product.html
+++ b/Product.html
@@ -14,8 +14,8 @@
 	<header>
 		<h1 class="title">Radio</H1>
 		<ul>
-			<li class="tab-content"><a href="HomPage.html">Trang chủ</a></li>
-			<li class="tab-content"><a href="History.html">Lịch sử</a></li>
+			<li class="tab-content"><a href="index.html">Trang chủ</a></li>
+			<li class="tab-content"><a href="Dowload.html">Tải xuống</a></li>
 			<li class="tab-content"><a href="About.html">Về Chúng tôi</a></li>
 		</ul>
 	</header>
@@ -25,10 +25,19 @@
 		</div>
 		<div class="right">
 			<p>Nền Tảng Nghe Nhạc Miễn Phí</p1>
-			<div class="button-group">
-				<button>GitHub</button>
-				<button>Tải Xuống</button>
-			</div>
+				<br><br><br>
+			<p>Giao diện ứng dụng Radio</p>
+			<h2 style="font-weight: lighter;">Hình ảnh bài hát lựa chọn, các nút option và Album của bạn</h2>
+			<h1>* Thêm bài hát</h1>
+			<h2 style="font-weight: lighter;">Chọn <strong style="font-weight: bold;">Add Music</strong> để thêm bài hát
+			</h2>
+			<h3 style="font-weight: lighter;">Nhập tên và chọn hình ảnh và file mp3, sau đó bấm Thêm</h3>
+
+			<h1>* Xóa bài hát</h1>
+			<h2 style="font-weight: lighter;">Chọn bài hát trong Album -> bấm <strong>Delete</strong> để xóa</h2>
+
+			<p style="font-size: medium;">Cám ơn các bạn đã sử dụng ứng dụng của chúng tôi! Có phản hồi xin hãy <a
+					href="About.html" style="color: aqua;">Liên hệ với chúng tôi.</a></p>
 		</div>
 	</div>
 	<footer class="footer">
