--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<header>
 		<h1 class="title">Radio</H1>
 		<ul>
-			<li class="tab-content"><a href="HomPage.html">Trang chủ</a></li>
-			<li class="tab-content"><a href="Produt.html">Sản phẩm</a></li>
+			<li class="tab-content"><a href="index.html">Trang chủ</a></li>
+			<li class="tab-content"><a href="Product.html">Sản phẩm</a></li>
 			<li class="tab-content"><a href="About.html">Về Chúng tôi</a></li>
 		</ul>
 	</header>
