--- a/About.html
+++ b/About.html
@@ -16,8 +16,8 @@
 	<header>
 		<h1 class="title">Radio</H1>
 		<ul>
-			<li class="tab-content"><a href="HomPage.html">Trang chủ</a></li>
-			<li class="tab-content"><a href="History.html">Lịch sử</a></li>
+			<li class="tab-content"><a href="index.html">Trang chủ</a></li>
+			<li class="tab-content"><a href="Dowload.html">Tải xuống</a></li>
 			<li class="tab-content"><a href="About.html">Về Chúng tôi</a></li>
 		</ul>
 	</header>
