--- a/Dowload.html
+++ b/Dowload.html
@@ -14,8 +14,8 @@
 	<header>
 		<h1 class="title">Radio</H1>
 		<ul>
-			<li class="tab-content"><a href="HomPage.html">Trang chủ</a></li>
-			<li class="tab-content"><a href="Produt.html">Sản phẩm</a></li>
+			<li class="tab-content"><a href="index.html">Trang chủ</a></li>
+			<li class="tab-content"><a href="Product.html">Sản phẩm</a></li>
 			<li class="tab-content"><a href="About.html">Về Chúng tôi</a></li>
 		</ul>
 	</header>
@@ -26,8 +26,7 @@
 		<div class="right">
 			<p>Nền Tảng Nghe Nhạc Miễn Phí</p1>
 			<div class="button-group">
-				<button>GitHub</button>
-				<button>Tải Xuống</button>
+				
 			</div>
 		</div>
 	</div>
