--- a/About.html
+++ b/About.html
@@ -29,51 +29,36 @@
 	<div class="row">
 		<div class="column">
 			<div class="card">
-				<img src="./assets/z3762074449405_6fd446860025faaf3a78a39efd4a2626.jpg">
+				<img src="./assets/images/dev/Khoa.jpg">
 				<div class="container">
 					<h2>Đăng Khoa</h2>
 					<hr>
 					<p class="title">Software tester</p>
 					<p>khoaa82019@gmail.com</p>
-					<div class="button-group">
-						<button class="contact"></button>
-						<button class="contact"></button>
-					</div>
-
 				</div>
 			</div>
 		</div>
 
 		<div class="column">
 			<div class="card">
-				<img src="./assets/z3762074449405_6fd446860025faaf3a78a39efd4a2626.jpg">
+				<img src="./assets/images/dev/KhuongPham.jpg">
 				<div class="container">
 					<h2>Duy Khương</h2>
 					<hr>
-					<p class="title">Software tester</p>
-					<p>khoaa82019@gmail.com</p>
-					<div class="button-group">
-						<button>hi</button>
-						<button>ha</button>
-					</div>
-
+					<p class="title">Software developer</p>
+					<p>khuongpham1412@gmail.com</p>
 				</div>
 			</div>
 		</div>
 
 		<div class="column">
 			<div class="card">
-				<img src="./assets/z3762074449405_6fd446860025faaf3a78a39efd4a2626.jpg">
+				<img src="./assets/images/dev/VuKiet.jpg">
 				<div class="container">
 					<h2>Bá Kiệt</h2>
 					<hr>
-					<p class="title">Software tester</p>
-					<p>khoaa82019@gmail.com</p>
-					<div class="button-group">
-						<button>hi</button>
-						<button>ha</button>
-					</div>
-
+					<p class="title">Software developer</p>
+					<p>vuxkiet1412@gmail.com</p>
 				</div>
 			</div>
 		</div>
@@ -102,17 +87,14 @@
 				<h2>Liên kết</h2>
 				<ul>
 					<li>
-						Sản phẩm
+						<a href="Product.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Sản phẩm</a>
 					</li>
 					<li>
-						Về chúng tôi
+						<a href="About.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Về chúng tôi</a>
 					</li>
 					<li>
-						GitHub
-					</li>
-					<li>
-						Tải xuống
-					</li>
+						<a href="Dowload.html" style="color:rgba(255, 255, 255, 0.507); text-decoration: none;">Tải xuống</a>
+					</li>	
 				</ul>
 			</div>
 		</div>
