--- a/Dowload.html
+++ b/Dowload.html
@@ -12,21 +12,59 @@
 
 <body>
 	<header>
-		<h1 class="title">Radio</H1>
+		<h1 class="title">Radio</h1>
 		<ul>
 			<li class="tab-content"><a href="index.html">Trang chủ</a></li>
 			<li class="tab-content"><a href="Product.html">Sản phẩm</a></li>
 			<li class="tab-content"><a href="About.html">Về Chúng tôi</a></li>
 		</ul>
 	</header>
-	<div class="body-content">
+	<div class="body-content" style="align-items: start!important;">
 		<div class="left">
 			<img src="./assets/disk.png" alt="">
 		</div>
 		<div class="right">
-			<p>Nền Tảng Nghe Nhạc Miễn Phí</p1>
+			<h1 style="text-decoration: underline; margin-top: 100px; font-size: 40px;">Tải xuống</h1>
+			<br>
 			<div class="button-group">
-				
+				<h1>Bước 1: Tải phầm mềm phát audio <strong>VLC</strong> để chạy chương trình </h1>
+				<h2>Đối với win64. Tải xuống tại đây. <a style="color:aqua"
+						href="https://get.videolan.org/vlc/3.0.11/win64/vlc-3.0.11-win64.exe">Tải xuống</a></h2>
+				<h2>Đối với win32. Tải xuống tại đây. <a style="color:aqua"
+						href="https://get.videolan.org/vlc/3.0.18/win32/vlc-3.0.18-win32.exe">Tải xuống</a></h2>
+				<br>
+				<h1>Bước 2: Tải source code Server và Client của chương trình</h1>
+				<p style="font-size: 20px;">Clone hoặc download source tại trang github:</p>
+				<h2>Source Server: <a style="color: aqua;"
+						href="https://github.com/khuongpham1412/Open-Source-Software-Radio-Server">https://github.com/khuongpham1412/Open-Source-Software-Radio-Server</a>
+				</h2>
+				<h2>Source Client: <a style="color: aqua;"
+						href="https://github.com/khuongpham1412/Open-Source-Software-Radio-Client">https://github.com/khuongpham1412/Open-Source-Software-Radio-Client</a>
+				</h2>
+				<br>
+				<h1>Bước 3: Cài đặt</h1>
+				<p style="font-size: 22px;">* Server</p>
+				<div style="font-size: 14px; font-weight: lighter;">
+					<h3>Mở terminal và nhập lệnh: pip install -r libs.txt </h3>
+					<h3>để cài đặt thư viện cho server</h3>
+					<h3>Sau khi cài đặt thư viện. Bấm nút play để run server</h3>
+				</div>
+				<img src="./assets/images/downloads/download1.png" alt="download1" width="80%">
+				<br>
+				<p style="font-size: 22px;">* Client</p>
+				<div style="font-size: 14px; font-weight: lighter;">
+					<h3>Tương tự! mở terminal và nhập lệnh: pip install -r libs.txt </h3>
+					<h3>để cài đặt thư viện cho client</h3>
+					<h3>Sau khi cài đặt thư viện. Bấm nút play để run client</h3>
+				</div>
+				<img src="./assets/images/downloads/download2.png" alt="download2" width="80%">
+				<br><br><br>
+				<h2>Giao diện sau khi chạy</h2>
+				<img src="./assets/images/products/giaodien.png" alt="giaodien" width="80%">
+				<br><br><br>
+				<i>
+					<p>Chúc các bạn thành công! <a href="Product.html" style="color: aqua;">Xem hướng dẫn</a></p>
+				</i>
 			</div>
 		</div>
 	</div>
@@ -41,17 +79,14 @@
 			<div class="footer_group__links">
 				<h2>Liên kết</h2>
 				<ul>
-					<li>
-						Sản phẩm
+						<li>
+						<a href="Product.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Sản phẩm</a>
 					</li>
 					<li>
-						Về chúng tôi
+						<a href="About.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Về chúng tôi</a>
 					</li>
 					<li>
-						GitHub
-					</li>
-					<li>
-						Tải xuống
+						<a href="Dowload.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Tải xuống</a>
 					</li>
 				</ul>
 			</div>
