--- a/Product.html
+++ b/Product.html
@@ -19,25 +19,39 @@
 			<li class="tab-content"><a href="About.html">Về Chúng tôi</a></li>
 		</ul>
 	</header>
-	<div class="body-content">
+	<div class="body-content" style="align-items: start!important;">
 		<div class="left">
 			<img src="./assets/disk.png" alt="">
 		</div>
-		<div class="right">
-			<p>Nền Tảng Nghe Nhạc Miễn Phí</p1>
-				<br><br><br>
+		<div style="margin-top:100px ;"class="right">
+			<p >Nền Tảng Nghe Nhạc Miễn Phí</p1>
+				<br><br>
 			<p>Giao diện ứng dụng Radio</p>
+			<img src="./assets/images/products/giaodien.png" alt="giao dien">
+			<br><br><br>
 			<h2 style="font-weight: lighter;">Hình ảnh bài hát lựa chọn, các nút option và Album của bạn</h2>
+			<img src="./assets/images/products/giaodien1.png" alt="giaodien1">
+			<br><br><br>
+			<br><br><br>
 			<h1>* Thêm bài hát</h1>
+			<br>
 			<h2 style="font-weight: lighter;">Chọn <strong style="font-weight: bold;">Add Music</strong> để thêm bài hát
 			</h2>
+			<img src="./assets/images/products/giaodien2.png" alt="giaodien2">
+			<br><br><br>
 			<h3 style="font-weight: lighter;">Nhập tên và chọn hình ảnh và file mp3, sau đó bấm Thêm</h3>
-
+			<br>
+			<img src="./assets/images/products/giaodien3.png" alt="giaodien3">
+			<h3 style="font-weight: lighter;">Nhập tên và chọn hình ảnh và file mp3, sau đó bấm Thêm</h3>
+			<br><br><br>
 			<h1>* Xóa bài hát</h1>
-			<h2 style="font-weight: lighter;">Chọn bài hát trong Album -> bấm <strong>Delete</strong> để xóa</h2>
-
-			<p style="font-size: medium;">Cám ơn các bạn đã sử dụng ứng dụng của chúng tôi! Có phản hồi xin hãy <a
-					href="About.html" style="color: aqua;">Liên hệ với chúng tôi.</a></p>
+			<h2 style="font-weight: lighter;">Chọn bài hát trong Album -> bấm <strong>Delete Music</strong> để xóa</h2>
+			<img src="./assets/images/products/giaodien4.png" alt="giaodien4">
+			<br><br><br>
+			<i>
+				<p style="font-size: medium;">Cám ơn các bạn đã sử dụng ứng dụng của chúng tôi! Có phản hồi xin hãy <a
+						href="About.html" style="color: aqua;">Liên hệ với chúng tôi.</a></p>
+			</i>
 		</div>
 	</div>
 	<footer class="footer">
@@ -52,16 +66,13 @@
 				<h2>Liên kết</h2>
 				<ul>
 					<li>
-						Sản phẩm
+						<a href="Product.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Sản phẩm</a>
 					</li>
 					<li>
-						Về chúng tôi
+						<a href="About.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Về chúng tôi</a>
 					</li>
 					<li>
-						GitHub
-					</li>
-					<li>
-						Tải xuống
+						<a href="Dowload.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Tải xuống</a>
 					</li>
 				</ul>
 			</div>
