--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="right">
 			<p>Nền Tảng Nghe Nhạc Miễn Phí</p1>
 			<div class="button-group">
-				<button>GitHub</button>
+				<button><a href="https://github.com/khuongpham1412/Open-Source-Software-Radio-Server" style="text-decoration: none; color: black;">GitHub</a></button>
 				<button onclick="window.location.href='Dowload.html'">Tải Xuống</button>
 			</div>
 		</div>
@@ -43,17 +43,14 @@
 				<h2>Liên kết</h2>
 				<ul>
 					<li>
-						Sản phẩm
+						<a href="Product.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Sản phẩm</a>
 					</li>
 					<li>
-						Về chúng tôi
+						<a href="About.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Về chúng tôi</a>
 					</li>
 					<li>
-						GitHub
-					</li>
-					<li>
-						Tải xuống
-					</li>
+						<a href="Dowload.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Tải xuống</a>
+					</li>	
 				</ul>
 			</div>
 		</div>
