--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="footer_group">
 			<div class="footer_group__about">
 				<h2>Về chúng tôi</h2>
-				<p>Radio là một ứng dụng giúp người dùng phát các tệp âm thanh trên máy tính hoặc thiết bị di động
+				<p>Radio là một ứng dụng giúp người dùng phát các tệp âm thanh trên máy tính desktop
 					của họ. Đây là một ứng dụng rất phổ biến và được sử dụng rộng rãi trong các lĩnh vực khác nhau,
 					từ giải trí cho đến công việc.</p>
 			</div>
