--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</ul>
 	</header>
 	<div class="body-content">
-		<div class="left">
+		<div class="left_HomePage">
 			<img src="./assets/disk.png" alt="">
 		</div>
 		<div class="right">
