--- a/About.html
+++ b/About.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://kit.fontawesome.com/e337c42123.js" crossorigin="anonymous"></script>
 	<title>Radio</title>
 
 </head>
@@ -14,7 +15,9 @@
 <body>
 
 	<header>
-		<h1 class="title">Radio</H1>
+		<h1 class="title">
+			<a href="index.html" style="color: rgb(175, 164, 164); text-decoration: none;">Radio</a>
+		</h1>
 		<ul>
 			<li class="tab-content"><a href="index.html">Trang chủ</a></li>
 			<li class="tab-content"><a href="Dowload.html">Tải xuống</a></li>
@@ -30,11 +33,21 @@
 		<div class="column">
 			<div class="card">
 				<img src="./assets/images/dev/Khoa.jpg">
-				<div class="container">
+				<div class="container contact_container">
 					<h2>Đăng Khoa</h2>
 					<hr>
 					<p class="title">Software tester</p>
 					<p>khoaa82019@gmail.com</p>
+					<div class="contact_group">
+						<div class="contact_group__icon" style="border: solid 2px rgb(0, 255, 55);"><i
+								class="fa-brands fa-google-plus-g" style="color: rgb(0, 255, 55);"></i></div>
+						<div class="contact_group__icon"
+							style="border: solid 2px rgb(255, 0, 98); margin-left: 20px; margin-right: 20px;"><i
+								class="fa-brands fa-github" style="color: rgb(255, 0, 98);"></i></div>
+						<div class="contact_group__icon" style="border: solid 2px rgb(0, 102, 255);">
+							<i class="fa-brands fa-facebook-f" style="color: rgb(0, 102, 255);"></i>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -42,11 +55,25 @@
 		<div class="column">
 			<div class="card">
 				<img src="./assets/images/dev/KhuongPham.jpg">
-				<div class="container">
+				<div class="container contact_container">
 					<h2>Duy Khương</h2>
 					<hr>
 					<p class="title">Software developer</p>
 					<p>khuongpham1412@gmail.com</p>
+					<div class="contact_group">
+						<div class="contact_group__icon" style="border: solid 2px rgb(0, 255, 55);"><i
+								class="fa-brands fa-google-plus-g" style="color: rgb(0, 255, 55);"></i></div>
+						<div class="contact_group__icon"
+							style="border: solid 2px rgb(255, 0, 98); margin-left: 20px; margin-right: 20px;">
+							<a href="https://github.com/khuongpham1412">
+								<i class="fa-brands fa-github" style="color: rgb(255, 0, 98);"></i>
+							</a>
+						</div>
+						<div class="contact_group__icon" style="border: solid 2px rgb(0, 102, 255);">
+							<i class="fa-brands fa-facebook-f" style="color: rgb(0, 102, 255);"></i>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
@@ -54,11 +81,24 @@
 		<div class="column">
 			<div class="card">
 				<img src="./assets/images/dev/VuKiet.jpg">
-				<div class="container">
+				<div class="container contact_container">
 					<h2>Bá Kiệt</h2>
 					<hr>
 					<p class="title">Software developer</p>
 					<p>vuxkiet1412@gmail.com</p>
+					<div class="contact_group">
+						<div class="contact_group__icon" style="border: solid 2px rgb(0, 255, 55);"><i
+								class="fa-brands fa-google-plus-g" style="color: rgb(0, 255, 55);"></i></div>
+						<div class="contact_group__icon"
+							style="border: solid 2px rgb(255, 0, 98); margin-left: 20px; margin-right: 20px;">
+							<a href="https://github.com/vubakiet">
+								<i class="fa-brands fa-github" style="color: rgb(255, 0, 98);"></i>
+							</a>
+						</div>
+						<div class="contact_group__icon" style="border: solid 2px rgb(0, 102, 255);">
+							<i class="fa-brands fa-facebook-f" style="color: rgb(0, 102, 255);"></i>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -79,23 +119,41 @@
 		<div class="footer_group">
 			<div class="footer_group__about">
 				<h2>Về chúng tôi</h2>
-				<p>Radio là một ứng dụng giúp người dùng phát các tệp âm thanh trên máy tính hoặc thiết bị di động
+				<p>Radio là một ứng dụng giúp người dùng phát các tệp âm thanh trên máy tính desktop
 					của họ. Đây là một ứng dụng rất phổ biến và được sử dụng rộng rãi trong các lĩnh vực khác nhau,
 					từ giải trí cho đến công việc.</p>
+				<div>
+					<i class="fa-solid fa-phone" style="color: #ff9900;"></i>
+					<span style="font-weight: bold; color: rgba(255, 255, 255, 0.507);">+84 862 729 369</span>
+				</div>
+				<div style="margin-top: 10px; margin-bottom: 10px;">
+					<i class="fa-solid fa-envelope" style="color: #ff9900;"></i>
+					<span style="font-weight: bold; color:rgba(255, 255, 255, 0.507);">vuxkiet1412@gmail.com</span>
+				</div>
+				<div class="footer_input">
+					<input type="text" placeholder="Nhập email của bạn">
+					<button style="position: absolute; top: 6%; right: 0.5%;" class="btn">Send</button>
+				</div>
 			</div>
 			<div class="footer_group__links">
 				<h2>Liên kết</h2>
 				<ul>
 					<li>
-						<a href="Product.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Sản phẩm</a>
+						<a href="Product.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Sản
+							phẩm</a>
 					</li>
 					<li>
-						<a href="About.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Về chúng tôi</a>
+						<a href="About.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Về chúng
+							tôi</a>
 					</li>
 					<li>
-						<a href="Dowload.html" style="color:rgba(255, 255, 255, 0.507); text-decoration: none;">Tải xuống</a>
-					</li>	
+						<a href="Dowload.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Tải
+							xuống</a>
+					</li>
 				</ul>
+			</div>
+			<div class="footer_group__logo">
+				<img src="./assets/disk.png" alt="logo" width="100%">
 			</div>
 		</div>
 		<hr>
