--- a/Dowload.html
+++ b/Dowload.html
@@ -6,13 +6,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://kit.fontawesome.com/e337c42123.js" crossorigin="anonymous"></script>
 	<title>Radio</title>
 
 </head>
 
 <body>
 	<header>
-		<h1 class="title">Radio</h1>
+		<h1 class="title">
+			<a href="index.html" style="color: rgb(175, 164, 164); text-decoration: none;">Radio</a>
+		</h1>
 		<ul>
 			<li class="tab-content"><a href="index.html">Trang chủ</a></li>
 			<li class="tab-content"><a href="Product.html">Sản phẩm</a></li>
@@ -27,7 +30,7 @@
 			<h1 style="text-decoration: underline; margin-top: 100px; font-size: 40px;">Tải xuống</h1>
 			<br>
 			<div class="button-group">
-				<h1>Bước 1: Tải phầm mềm phát audio <strong>VLC</strong> để chạy chương trình </h1>
+				<h1>Bước 1: Tải phầm mềm phát audio <strong>VLC</strong>. </h1>
 				<h2>Đối với win64. Tải xuống tại đây. <a style="color:aqua"
 						href="https://get.videolan.org/vlc/3.0.11/win64/vlc-3.0.11-win64.exe">Tải xuống</a></h2>
 				<h2>Đối với win32. Tải xuống tại đây. <a style="color:aqua"
@@ -72,23 +75,41 @@
 		<div class="footer_group">
 			<div class="footer_group__about">
 				<h2>Về chúng tôi</h2>
-				<p>Radio là một ứng dụng giúp người dùng phát các tệp âm thanh trên máy tính hoặc thiết bị di động
+				<p>Radio là một ứng dụng giúp người dùng phát các tệp âm thanh trên máy tính desktop
 					của họ. Đây là một ứng dụng rất phổ biến và được sử dụng rộng rãi trong các lĩnh vực khác nhau,
 					từ giải trí cho đến công việc.</p>
+				<div>
+					<i class="fa-solid fa-phone" style="color: #ff9900;"></i>
+					<span style="font-weight: bold; color: rgba(255, 255, 255, 0.507);">+84 862 729 369</span>
+				</div>
+				<div style="margin-top: 10px; margin-bottom: 10px;">
+					<i class="fa-solid fa-envelope" style="color: #ff9900;"></i>
+					<span style="font-weight: bold; color:rgba(255, 255, 255, 0.507);">vuxkiet1412@gmail.com</span>
+				</div>
+				<div class="footer_input">
+					<input type="text" placeholder="Nhập email của bạn">
+					<button style="position: absolute; top: 6%; right: 0.5%;" class="btn">Send</button>
+				</div>
 			</div>
 			<div class="footer_group__links">
 				<h2>Liên kết</h2>
 				<ul>
-						<li>
-						<a href="Product.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Sản phẩm</a>
+					<li>
+						<a href="Product.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Sản
+							phẩm</a>
 					</li>
 					<li>
-						<a href="About.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Về chúng tôi</a>
+						<a href="About.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Về chúng
+							tôi</a>
 					</li>
 					<li>
-						<a href="Dowload.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Tải xuống</a>
+						<a href="Dowload.html" style="color: rgba(255, 255, 255, 0.507); text-decoration: none;">Tải
+							xuống</a>
 					</li>
 				</ul>
+			</div>
+			<div class="footer_group__logo">
+				<img src="./assets/disk.png" alt="logo" width="100%">
 			</div>
 		</div>
 		<hr>
