--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<button class="btn"><a href="https://github.com/khuongpham1412/Open-Source-Software-Radio-Server"
 						style="text-decoration: none; color: black;">GitHub</a></button>
 				<button class="btn" style="width: auto; padding-left: 15px; padding-right:15px; color: black"
-					onclick="window.location.href='Dowload.html'">Tải Xuống</button>
+					onclick="window.location.href='Download.html'">Tải Xuống</button>
 			</div>
 		</div>
 	</div>
