--- a/About.html
+++ b/About.html
@@ -20,7 +20,7 @@
 		</h1>
 		<ul>
 			<li class="tab-content"><a href="index.html">Trang chủ</a></li>
-			<li class="tab-content"><a href="Dowload.html">Tải xuống</a></li>
+			<li class="tab-content"><a href="Download.html">Tải xuống</a></li>
 			<li class="tab-content"><a href="About.html">Về Chúng tôi</a></li>
 		</ul>
 	</header>
