--- a/Download-developer.html
+++ b/Download-developer.html
@@ -45,7 +45,7 @@
 				<h1>Bước 3: Cài đặt</h1>
 				<p style="font-size: 22px; text-decoration: underline;">Server</p>
 				<div style="font-size: 14px; font-weight: lighter;">
-					<h3>Mở terminal và nhập lệnh: pip install -r libs.txt </h3>
+					<h3>Mở terminal và nhập lệnh: pip install -r requirements.txt </h3>
 					<h3>để cài đặt thư viện cho server</h3>
 					<h3>Sau khi cài đặt thư viện. Bấm nút play để run server</h3>
 				</div>
@@ -53,7 +53,7 @@
 				<br>
 				<p style="font-size: 22px; text-decoration: underline;">* Client</p>
 				<div style="font-size: 14px; font-weight: lighter;">
-					<h3>Tương tự! mở terminal và nhập lệnh: pip install -r libs.txt </h3>
+					<h3>Tương tự! mở terminal và nhập lệnh: pip install -r requirements.txt </h3>
 					<h3>để cài đặt thư viện cho client</h3>
 					<h3>Sau khi cài đặt thư viện. Bấm nút play để run client</h3>
 				</div>
