--- a/Download-developer.html
+++ b/Download-developer.html
@@ -44,6 +44,8 @@
 				<br>
 				<h1>Bước 3: Cài đặt</h1>
 				<p style="font-size: 22px; text-decoration: underline;">Server</p>
+			
+				
 				<div style="font-size: 14px; font-weight: lighter;">
 					<h3>Mở terminal và nhập lệnh: pip install -r requirements.txt </h3>
 					<h3>để cài đặt thư viện cho server</h3>
@@ -51,7 +53,7 @@
 				</div>
 				<img src="./assets/images/downloads/download1.png" alt="download1" width="80%">
 				<br>
-				<p style="font-size: 22px; text-decoration: underline;">* Client</p>
+				<p style="font-size: 22px; text-decoration: underline;">Client</p>
 				<div style="font-size: 14px; font-weight: lighter;">
 					<h3>Tương tự! mở terminal và nhập lệnh: pip install -r requirements.txt </h3>
 					<h3>để cài đặt thư viện cho client</h3>
